Changed Sql injections literature (#16)

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -516,6 +516,14 @@
     urldate = {2022-06-14}
 }
 
+@article{SqlInjection,
+	author = {Mohd Amin Bin Mohd Yunus},
+	journal = {International journal on informatics visualization},
+	year = {2018},
+	title = {Review of SQL Injection : Problems and Prevention},
+	url = {https://www.researchgate.net/publication/325940419_Review_of_SQL_Injection_Problems_and_Prevention}
+}
+
 @techreport{ClientServerArchitecture,
 	TITLE = "{Различные архитектурные решения, используемые при реализации многопользовательских СУБД. Краткий обзор СУБД}",
 	HOWPUBLISHED = {НОУ ИНТУИТ},
